--- a/src/main/webapp/styles/member.css
+++ b/src/main/webapp/styles/member.css
@@ -122,4 +122,26 @@ body {
   button:hover {
     background-color: #66a689;
   }
-  
+  .styled-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.styled-table th, .styled-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.styled-table th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+}
+
+.styled-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.styled-table tr:hover {
+    background-color: #f1f1f1;
+}
