--- a/src/main/webapp/styles/librarian.css
+++ b/src/main/webapp/styles/librarian.css
@@ -84,6 +84,9 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin-bottom: 20px;
+  max-height:600px;
+  overflow: scroll;
+  
 }
 
 table {
